--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -1,57 +1,117 @@
-/* Общий фон и текст */
-body {
-	background-color: #0d0d0d;
-	color: #e0e0e0;
-	font-family: 'Roboto', sans-serif;
-	line-height: 1.6;
-	padding: 20px;
+/*! GitHub: GitHub Dark *//*
+ * Modified from https://github.com/primer/github-syntax-dark/blob/master/lib/github-dark.css
+ * Copyright (c) 2012 - 2017 GitHub, Inc.
+ * Licensed under MIT (https://github.com/primer/github-syntax-theme-generator/blob/master/LICENSE)
+ */
+:root {
+  --ghd-code-background: #141414;
+  --ghd-code-color: #ccc;
 }
-
-/* Ссылки */
-a {
-	color: #61dafb;
-	text-decoration: none;
+/*!
+ * GitHub Dark v0.5.0
+ * Copyright (c) 2012 - 2017 GitHub, Inc.
+ * Licensed under MIT (https://github.com/primer/github-syntax-theme-generator/blob/master/LICENSE)
+ */
+.pl-c /* comment, punctuation.definition.comment, string.comment */ {
+  color: #959da5;
 }
-a:hover {
-	color: #ff79c6;
+.pl-c1 /* constant, entity.name.constant, variable.other.constant, variable.language, support, meta.property-name, support.constant, support.variable, meta.module-reference, markup.quote, markup.raw, meta.diff.header */,
+.pl-s .pl-v /* string variable */ {
+  color: #c8e1ff;
 }
-
-/* Заголовки */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	color: #f8f8f2;
+.pl-e /* entity */,
+.pl-en /* entity.name */ {
+  color: #b392f0;
 }
-
-/* Таблицы */
-table {
-	border-collapse: collapse;
-	width: 100%;
-	color: #e0e0e0;
+.pl-smi /* variable.parameter.function, storage.modifier.package, storage.modifier.import, storage.type.java, variable.other */,
+.pl-s .pl-s1 /* string source */ {
+  color: #f6f8fa;
 }
-th,
-td {
-	border: 1px solid #444;
-	padding: 8px;
+.pl-ent /* entity.name.tag */ {
+  color: #7bcc72;
 }
-th {
-	background-color: #1f1f1f;
+.pl-k /* keyword, storage, storage.type */ {
+  color: #ea4a5a;
 }
-
-/* Код */
-code {
-	background-color: #1e1e1e;
-	color: #f8f8f2;
-	padding: 2px 4px;
-	border-radius: 3px;
+.pl-s /* string */,
+.pl-pds /* punctuation.definition.string, source.regexp, string.regexp.character-class */,
+.pl-s .pl-pse .pl-s1 /* string punctuation.section.embedded source */,
+.pl-sr /* string.regexp */,
+.pl-sr .pl-cce /* string.regexp constant.character.escape */,
+.pl-sr .pl-sre /* string.regexp source.ruby.embedded */,
+.pl-sr .pl-sra /* string.regexp string.regexp.arbitrary-repitition */ {
+  color: #79b8ff;
 }
-pre {
-	background-color: #1e1e1e;
-	color: #f8f8f2;
-	padding: 10px;
-	border-radius: 5px;
-	overflow-x: auto;
+.pl-v /* variable */,
+.pl-ml /* markup.list, sublimelinter.mark.warning */ {
+  color: #fb8532;
+}
+.pl-bu /* invalid.broken, invalid.deprecated, invalid.unimplemented, message.error, brackethighlighter.unmatched, sublimelinter.mark.error */ {
+  color: #d73a49;
+}
+.pl-ii /* invalid.illegal */ {
+  color: #fafbfc;
+  background-color: #d73a49;
+}
+.pl-c2 /* carriage-return */ {
+  color: #fafbfc;
+  background-color: #d73a49;
+}
+.pl-c2::before /* carriage-return */ {
+  content: "^M";
+}
+.pl-sr .pl-cce /* string.regexp constant.character.escape */ {
+  font-weight: bold;
+  color: #7bcc72;
+}
+.pl-mh /* markup.heading */,
+.pl-mh .pl-en /* markup.heading entity.name */,
+.pl-ms /* meta.separator */ {
+  font-weight: bold;
+  color: #0366d6;
+}
+.pl-mi /* markup.italic */ {
+  font-style: italic;
+  color: #f6f8fa;
+}
+.pl-mb /* markup.bold */ {
+  font-weight: bold;
+  color: #f6f8fa;
+}
+.pl-md /* markup.deleted, meta.diff.header.from-file, punctuation.definition.deleted */ {
+  color: #d73a49;
+  background-color: #300;
+}
+.pl-mi1 /* markup.inserted, meta.diff.header.to-file, punctuation.definition.inserted */ {
+  color: #7bcc72;
+  background-color: #121;
+}
+.pl-mc /* markup.changed, punctuation.definition.changed */ {
+  color: #b08800;
+  background-color: #261d08;
+}
+.pl-mi2 /* markup.ignored, markup.untracked */ {
+  color: #2f363d;
+  background-color: #959da5;
+}
+.pl-mdr /* meta.diff.range */ {
+  font-weight: bold;
+  color: #b392f0;
+}
+.pl-mo /* meta.output */ {
+  color: #0366d6;
+}
+.pl-ba /* brackethighlighter.tag, brackethighlighter.curly, brackethighlighter.round, brackethighlighter.square, brackethighlighter.angle, brackethighlighter.quote */ {
+  color: #ffeef0;
+}
+.pl-sg /* sublimelinter.gutter-mark */ {
+  color: #6a737d;
+}
+.pl-corl /* constant.other.reference.link, string.other.link */ {
+  text-decoration: underline;
+  color: #79b8ff;
+}
+.pl-token.active, .pl-token:hover {
+  background: #b392f0;
+  color: #141414;
 }
