--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -78,10 +78,15 @@
 				},
 				"datePosted": "2025-08-19",
 				"validThrough": "2025-12-31T23:59",
-				"contactPoint": {
-					"@type": "ContactPoint",
-					"contactType": "Job offers",
-					"email": "dvurechenskysoft@gmail.com"
+				"hiringOrganization": {
+					"@type": "Organization",
+					"name": "Dvurechensky Pro / Unifier / Lizerium",
+					"sameAs": "https://github.com/Dvurechensky",
+					"contactPoint": {
+						"@type": "ContactPoint",
+						"contactType": "Job offers",
+						"email": "dvurechenskysoft@gmail.com"
+					}
 				}
 			}
 		]
