--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -75,16 +75,96 @@
 				"sameAs": [
 					"https://github.com/dvurechensky",
 					"https://www.linkedin.com/in/dvurechensky-pro/",
-					"https://vk.com/dvurechensky_pro"
+					"https://vk.com/dvurechensky_pro",
+					"https://www.youtube.com/@DvurechenskyMedia",
+					"https://rutube.ru/channel/43901645/",
+					"https://x.com/DvurechenskyPro",
+					"https://bsky.app/profile/dvurechensky.pro",
+					"https://steamcommunity.com/id/dvurechensky/",
+					"https://steamcommunity.com/profiles/76561198335938126",
+					"https://mastodon.social/@dvurechensky",
+					"https://www.threads.com/@dvurechensky_pro",
+					"https://dev.to/dvurechensky",
+					"https://www.instagram.com/dvurechensky_pro/",
+					"https://gitlab.com/Dvurechensky",
+					"https://www.twitch.tv/dvurechensky_pro"
 				],
 				"jobTitle": "Software Engineer, Founder of Unifier and Lizerium",
 				"description": "Full-stack .NET & TypeScript developer. Опыт в ASP.NET Core, RabbitMQ, PostgreSQL, Unity, Flutter. Автор проекта Unifier.",
 				"email": "mailto:dvurechenskysoft@gmail.com",
+				"mainEntityOfPage": "https://sites.google.com/view/dvurechensky",
 				"contactPoint": {
 					"@type": "ContactPoint",
 					"contactType": "Job offers",
 					"email": "dvurechenskysoft@gmail.com"
-				}
+				},
+				"alumniOf": [
+					{
+						"@type": "CollegeOrUniversity",
+						"name": "Воронежский Государственный Технический Университет",
+						"department": "Безопасность компьютерных и информационных систем/защита информации",
+						"startDate": "2017",
+						"endDate": "2019"
+					},
+					{
+						"@type": "CollegeOrUniversity",
+						"name": "Московский авиационный институт (национальный исследовательский университет)",
+						"department": "Двухсредные летательные аппараты",
+						"startDate": "2015",
+						"endDate": "2017"
+					}
+				],
+				"hasCredential": [
+					{
+						"@type": "EducationalOccupationalCredential",
+						"name": "Профессия — Белый Хакер && Profession — White Hacker",
+						"dateIssued": "2024",
+						"awardingBody": "Образовательный центр CyberEd, Pentest && CyberEd Educational Center, Pentest",
+						"url": "https://stepik.org/cert/2369093"
+					},
+					{
+						"@type": "EducationalOccupationalCredential",
+						"name": "C#",
+						"dateIssued": "2019",
+						"awardingBody": "Sololearn",
+						"url": "https://www.sololearn.com/ru/certificates/CT-70MDLPFG"
+					},
+					{
+						"@type": "EducationalOccupationalCredential",
+						"name": "C++",
+						"dateIssued": "2019",
+						"awardingBody": "Sololearn",
+						"url": "https://www.sololearn.com/ru/certificates/CT-BCELXSJQ"
+					},
+					{
+						"@type": "EducationalOccupationalCredential",
+						"name": "CSS",
+						"dateIssued": "2019",
+						"awardingBody": "Sololearn",
+						"url": "https://www.sololearn.com/ru/certificates/CT-ELXDOGBR"
+					},
+					{
+						"@type": "EducationalOccupationalCredential",
+						"name": "HTML",
+						"dateIssued": "2019",
+						"awardingBody": "Sololearn",
+						"url": "https://www.sololearn.com/ru/certificates/CT-TWNF0GUO"
+					},
+					{
+						"@type": "EducationalOccupationalCredential",
+						"name": "JavaScript",
+						"dateIssued": "2019",
+						"awardingBody": "Sololearn",
+						"url": "https://www.sololearn.com/ru/certificates/CT-G0683SAI"
+					},
+					{
+						"@type": "EducationalOccupationalCredential",
+						"name": "SQL",
+						"dateIssued": "2019",
+						"awardingBody": "Sololearn",
+						"url": "https://www.sololearn.com/ru/certificates/CT-0UKGVMV2"
+					}
+				]
 			},
 			{
 				"@type": "JobPosting",
@@ -117,6 +197,11 @@
 				"name": "Unifier",
 				"url": "https://github.com/Unifier-of-Systems",
 				"logo": "https://avatars.githubusercontent.com/u/227248375?s=200&v=4",
+				"founder": {
+					"@type": "Person",
+					"name": "Dvurechensky Pro",
+					"url": "https://sites.google.com/view/dvurechensky"
+				},
 				"sameAs": [
 					"https://github.com/Dvurechensky",
 					"https://www.linkedin.com/in/dvurechensky-pro/",
@@ -129,6 +214,11 @@
 				"name": "Lizerium",
 				"url": "https://github.com/Lizerium",
 				"logo": "https://avatars.githubusercontent.com/u/213873170?s=200&v=4",
+				"founder": {
+					"@type": "Person",
+					"name": "Dvurechensky Pro",
+					"url": "https://sites.google.com/view/dvurechensky"
+				},
 				"sameAs": [
 					"https://github.com/Dvurechensky",
 					"https://www.linkedin.com/in/dvurechensky-pro/",
