--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -98,23 +98,29 @@
 					"contactType": "Job offers",
 					"email": "dvurechenskysoft@gmail.com"
 				},
-				"alumniOf": [
+				"hasCredential": [
 					{
-						"@type": "CollegeOrUniversity",
-						"name": "Воронежский Государственный Технический Университет",
-						"department": "Безопасность компьютерных и информационных систем/защита информации",
+						"@type": "EducationalOccupationalCredential",
+						"name": "Безопасность компьютерных и информационных систем / защита информации",
+						"educationalLevel": "Bachelor / Specialist",
+						"awardingBody": {
+							"@type": "CollegeOrUniversity",
+							"name": "Воронежский Государственный Технический Университет"
+						},
 						"startDate": "2017",
 						"endDate": "2019"
 					},
 					{
-						"@type": "CollegeOrUniversity",
-						"name": "Московский авиационный институт (национальный исследовательский университет)",
-						"department": "Двухсредные летательные аппараты",
+						"@type": "EducationalOccupationalCredential",
+						"name": "Двухсредные летательные аппараты",
+						"educationalLevel": "Bachelor / Specialist",
+						"awardingBody": {
+							"@type": "CollegeOrUniversity",
+							"name": "Московский авиационный институт (национальный исследовательский университет)"
+						},
 						"startDate": "2015",
 						"endDate": "2017"
-					}
-				],
-				"hasCredential": [
+					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "Профессия — Белый Хакер && Profession — White Hacker",
