--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -101,73 +101,65 @@
 				"hasCredential": [
 					{
 						"@type": "EducationalOccupationalCredential",
-						"name": "Безопасность компьютерных и информационных систем / защита информации",
-						"educationalLevel": "Bachelor / Specialist",
-						"awardingBody": {
-							"@type": "CollegeOrUniversity",
-							"name": "Воронежский Государственный Технический Университет"
-						},
-						"startDate": "2017",
-						"endDate": "2019"
+						"name": "Безопасность компьютерных и информационных систем / защита информации (2017–2019)",
+						"educationalLevel": "Specialist",
+						"dateIssued": "2019",
+						"description": "Воронежский Государственный Технический Университет"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "Двухсредные летательные аппараты",
-						"educationalLevel": "Bachelor / Specialist",
-						"awardingBody": {
-							"@type": "CollegeOrUniversity",
-							"name": "Московский авиационный институт (национальный исследовательский университет)"
-						},
-						"startDate": "2015",
-						"endDate": "2017"
+						"educationalLevel": "Specialist",
+						"dateIssued": "2017",
+						"description": "Московский авиационный институт (национальный исследовательский университет) (2015-2017)"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "Профессия — Белый Хакер && Profession — White Hacker",
 						"dateIssued": "2024",
-						"awardingBody": "Образовательный центр CyberEd, Pentest && CyberEd Educational Center, Pentest",
+						"description": "Образовательный центр CyberEd, Pentest && CyberEd Educational Center, Pentest",
 						"url": "https://stepik.org/cert/2369093"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "C#",
 						"dateIssued": "2019",
-						"awardingBody": "Sololearn",
+						"description": "Sololearn",
 						"url": "https://www.sololearn.com/ru/certificates/CT-70MDLPFG"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "C++",
 						"dateIssued": "2019",
-						"awardingBody": "Sololearn",
+						"description": "Sololearn",
 						"url": "https://www.sololearn.com/ru/certificates/CT-BCELXSJQ"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "CSS",
 						"dateIssued": "2019",
-						"awardingBody": "Sololearn",
+						"description": "Sololearn",
 						"url": "https://www.sololearn.com/ru/certificates/CT-ELXDOGBR"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "HTML",
 						"dateIssued": "2019",
-						"awardingBody": "Sololearn",
+						"description": "Sololearn",
 						"url": "https://www.sololearn.com/ru/certificates/CT-TWNF0GUO"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "JavaScript",
 						"dateIssued": "2019",
-						"awardingBody": "Sololearn",
+						"description": "Sololearn",
 						"url": "https://www.sololearn.com/ru/certificates/CT-G0683SAI"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "SQL",
 						"dateIssued": "2019",
-						"awardingBody": "Sololearn",
+						"description": "Sololearn",
 						"url": "https://www.sololearn.com/ru/certificates/CT-0UKGVMV2"
 					}
 				]
