--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -103,14 +103,12 @@
 						"@type": "EducationalOccupationalCredential",
 						"name": "Безопасность компьютерных и информационных систем / защита информации (2017–2019)",
 						"educationalLevel": "Specialist",
-						"dateIssued": "2019-09-01",
 						"description": "Воронежский Государственный Технический Университет"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "Двухсредные летательные аппараты",
 						"educationalLevel": "Specialist",
-						"dateIssued": "2017-09-01",
 						"description": "Московский авиационный институт (национальный исследовательский университет) (2015-2017)"
 					},
 					{
@@ -123,43 +121,37 @@
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "C#",
-						"dateIssued": "2019-11-08",
-						"description": "Sololearn",
+						"description": "Sololearn (2019-11-08)",
 						"url": "https://www.sololearn.com/ru/certificates/CT-70MDLPFG"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "C++",
-						"dateIssued": "2019-03-27",
-						"description": "Sololearn",
+						"description": "Sololearn (2019-03-27)",
 						"url": "https://www.sololearn.com/ru/certificates/CT-BCELXSJQ"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "CSS",
-						"dateIssued": "2019-04-04",
-						"description": "Sololearn",
+						"description": "Sololearn (2019-04-04)",
 						"url": "https://www.sololearn.com/ru/certificates/CT-ELXDOGBR"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "HTML",
-						"dateIssued": "2019-03-25",
-						"description": "Sololearn",
+						"description": "Sololearn (2019-03-25)",
 						"url": "https://www.sololearn.com/ru/certificates/CT-TWNF0GUO"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "JavaScript",
-						"dateIssued": "2019-06-17",
-						"description": "Sololearn",
+						"description": "Sololearn (2019-06-17)",
 						"url": "https://www.sololearn.com/ru/certificates/CT-G0683SAI"
 					},
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "SQL",
-						"dateIssued": "2019-06-16",
-						"description": "Sololearn",
+						"description": "Sololearn (2019-06-16)",
 						"url": "https://www.sololearn.com/ru/certificates/CT-0UKGVMV2"
 					}
 				]
