--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -114,8 +114,7 @@
 					{
 						"@type": "EducationalOccupationalCredential",
 						"name": "Профессия — Белый Хакер && Profession — White Hacker",
-						"dateIssued": "2024-02-23",
-						"description": "Образовательный центр CyberEd, Pentest && CyberEd Educational Center, Pentest",
+						"description": "Образовательный центр CyberEd, Pentest && CyberEd Educational Center, Pentest (2024-02-23)",
 						"url": "https://stepik.org/cert/2369093"
 					},
 					{
