--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -191,6 +191,7 @@
 				"url": "https://github.com/Unifier-of-Systems",
 				"logo": "https://avatars.githubusercontent.com/u/227248375?s=200&v=4",
 				"founder": {
+					"@id": "{{page.url}}#person",
 					"@type": "Person",
 					"name": "Dvurechensky Pro",
 					"url": "https://sites.google.com/view/dvurechensky"
@@ -208,6 +209,7 @@
 				"url": "https://github.com/Lizerium",
 				"logo": "https://avatars.githubusercontent.com/u/213873170?s=200&v=4",
 				"founder": {
+					"@id": "{{page.url}}#person",
 					"@type": "Person",
 					"name": "Dvurechensky Pro",
 					"url": "https://sites.google.com/view/dvurechensky"
