--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -45,6 +45,32 @@
 <script type="application/ld+json">
 	{
 		"@context": "https://schema.org",
+		"@type": "BreadcrumbList",
+		"itemListElement": [
+			{
+				"@type": "ListItem",
+				"position": 1,
+				"name": "Главная",
+				"item": "https://dvurechensky-docs.github.io/Internet/"
+			},
+			{
+				"@type": "ListItem",
+				"position": 2,
+				"name": "Животные API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/animals.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 3,
+				"name": "Аниме API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/anime.html"
+			}
+		]
+	}
+</script>
+<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
 		"@graph": [
 			{
 				"@type": "Person",
