--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -1,5 +1,12 @@
-<link rel="icon" type="image/png" href="assets/favicon.png" />
-<link rel="shortcut icon" href="assets/favicon.png" />
+<link
+	rel="icon"
+	type="image/png"
+	href="https://dvurechensky-docs.github.io/Internet/assets/favicon.png"
+/>
+<link
+	rel="shortcut icon"
+	href="https://dvurechensky-docs.github.io/Internet/assets/favicon.png"
+/>
 <meta
 	name="keywords"
 	content="dvurechensky_pro, lizerium, unifier, двуреченский, животные, аниме, защита от вредоносных программ, искусство, дизайн, аутентификация, авторизация, блокчейн, книги, бизнес, календарь, облачное хранилище, обмен файлами, непрерывная интеграция, криптовалюта, обмен валют, проверка данных, разработка, словари, документы, производительность, электронная почта, развлечения, окружающая среда, события, финансы, еда, напитки, игры, комиксы, геокодирование, правительство, здоровье, работа, jobs, машинное обучение, музыка, новости, открытые данные, open source, проекты с открытым исходным кодом, патенты, личность, идентификация, телефон, фотография, подкасты, программирование, наука, математика, безопасность, покупки, социальные сети, спорт, фитнес, тестовые данные, анализ текста, отслеживание, транспорт, url shorteners, автомобиль, видео, погода, api, бесплатные api, публичные api, ресурсы для разработчиков"
