--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -71,6 +71,30 @@
 				"position": 3,
 				"name": "Аниме API",
 				"item": "https://dvurechensky-docs.github.io/Internet/categories/anime.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 4,
+				"name": "Защита от вредоносных программ API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/protection_against_malware.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 5,
+				"name": "Исскуство и дизайн API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/art-and-design.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 6,
+				"name": "Аутентификация и авторизация API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/authentication-and-authorization.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 7,
+				"name": "Блокчейн API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/blockchain.html"
 			}
 		]
 	}
