--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -227,7 +227,11 @@
 					"@type": "Place",
 					"address": {
 						"@type": "PostalAddress",
-						"addressCountry": "RU"
+						"addressCountry": "RU",
+						"postalCode": "123112",
+						"addressRegion": "Москва",
+						"streetAddress": "Пресненская наб., 8 стр 1",
+						"addressLocality": "Москва"
 					}
 				},
 				"datePosted": "2025-08-19",
