--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -219,6 +219,16 @@
 			},
 			{
 				"@type": "JobPosting",
+				"baseSalary": {
+					"@type": "MonetaryAmount",
+					"currency": "USD",
+					"value": {
+						"@type": "QuantitativeValue",
+						"minValue": 3000,
+						"maxValue": 999999,
+						"unitText": "MONTH"
+					}
+				},
 				"title": "Software Engineer / Backend Developer",
 				"description": "Ищу позицию Software Engineer / Backend Developer в международной компании.",
 				"employmentType": "FULL_TIME",
