--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -95,6 +95,36 @@
 				"position": 7,
 				"name": "Блокчейн API",
 				"item": "https://dvurechensky-docs.github.io/Internet/categories/blockchain.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 8,
+				"name": "Книги API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/books.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 9,
+				"name": "Бизнес API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/business.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 10,
+				"name": "Календари API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/calendar.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 11,
+				"name": "Облачное хранилище и обмен файлами API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/cloud-storage-and-file-sharing.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 11,
+				"name": "Непрерывная интеграция API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/continuous-integration.html"
 			}
 		]
 	}
