--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -125,6 +125,18 @@
 				"position": 11,
 				"name": "Непрерывная интеграция API",
 				"item": "https://dvurechensky-docs.github.io/Internet/categories/continuous-integration.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 12,
+				"name": "Непрерывная интеграция API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/cryptocurrency.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 13,
+				"name": "Обмен валют",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/currency-exchange.html"
 			}
 		]
 	}
