--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -137,6 +137,18 @@
 				"position": 13,
 				"name": "Обмен валют",
 				"item": "https://dvurechensky-docs.github.io/Internet/categories/currency-exchange.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 14,
+				"name": "Проверка данных",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/data-check.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 15,
+				"name": "Разработка",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/development.html"
 			}
 		]
 	}
