--- a/docs/_includes/head-custom.html
+++ b/docs/_includes/head-custom.html
@@ -117,12 +117,6 @@
 			{
 				"@type": "ListItem",
 				"position": 11,
-				"name": "Облачное хранилище и обмен файлами API",
-				"item": "https://dvurechensky-docs.github.io/Internet/categories/cloud-storage-and-file-sharing.html"
-			},
-			{
-				"@type": "ListItem",
-				"position": 11,
 				"name": "Непрерывная интеграция API",
 				"item": "https://dvurechensky-docs.github.io/Internet/categories/continuous-integration.html"
 			},
@@ -149,6 +143,234 @@
 				"position": 15,
 				"name": "Разработка",
 				"item": "https://dvurechensky-docs.github.io/Internet/categories/development.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 16,
+				"name": "Словари",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/dictionaries.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 17,
+				"name": "Документы и производительность",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/documents-and-productivity.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 18,
+				"name": "Электронная почта",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/email.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 19,
+				"name": "Развлечения",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/entertainment.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 20,
+				"name": "Окружающая среда",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/environment.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 21,
+				"name": "События",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/events.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 22,
+				"name": "Финансы",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/finance.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 23,
+				"name": "Еда и напитки",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/food-and-drinks.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 24,
+				"name": "Игры и комиксы",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/games-and-comics.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 25,
+				"name": "Геокодирование",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/geocoding.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 26,
+				"name": "Правительство",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/government.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 27,
+				"name": "Здоровье",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/health.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 28,
+				"name": "Вакансии",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/jobs.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 29,
+				"name": "Машинное обучение",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/machine-learning.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 30,
+				"name": "Музыка",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/music.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 31,
+				"name": "Новости",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/news.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 32,
+				"name": "Открытые данные",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/open-data.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 33,
+				"name": "Проекты с открытым исходным кодом",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/open-source-projects.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 34,
+				"name": "Патент",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/patent.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 35,
+				"name": "Личность",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/personality.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 36,
+				"name": "Телефон",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/telephone.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 37,
+				"name": "Фотография",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/photo.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 38,
+				"name": "Подкасты",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/podcasts.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 39,
+				"name": "Программирование",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/programming.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 40,
+				"name": "Наука и математика",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/science-and-mathematics.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 41,
+				"name": "Безопасность",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/safety.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 42,
+				"name": "Покупки",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/purchases.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 43,
+				"name": "Общественные ресурсы",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/social.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 44,
+				"name": "Спорт и фитнес",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/sports-and-fitness.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 45,
+				"name": "Тестовые данные",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/test-data.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 46,
+				"name": "Анализ текста",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/text-analysis.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 47,
+				"name": "Отслеживание",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/tracking.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 48,
+				"name": "Транспорт",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/transport.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 49,
+				"name": "Сокращатели URL-адресов",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/url-shorteners.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 50,
+				"name": "Автомобиль",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/automobile.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 51,
+				"name": "Видео",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/video.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 52,
+				"name": "Погода",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/weather.html"
+			},
+			{
+				"@type": "ListItem",
+				"position": 53,
+				"name": "Облачное хранилище и обмен файлами API",
+				"item": "https://dvurechensky-docs.github.io/Internet/categories/cloud-storage-and-file-sharing.html"
 			}
 		]
 	}
